--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,7 +32,21 @@ body {
   color: #000000;
 }
 
-h1, h2, h3, h4, h5, h6, p, span, div, label, input, textarea, button, select, a {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+div,
+label,
+input,
+textarea,
+button,
+select,
+a {
   color: inherit;
 }
 
